fixed issue with topbar z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,7 +59,7 @@ hr{
 }
 
 .input > div {
-	z-index:10;
+	z-index:0;
 }
 
 
